data/raw_logs/lexical/lex_18.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_18.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_18.c:1:22: error: invalid digit '9' in octal constant
    1 | int main() { int x = 099; }
      |                      ^~~
